helm_packages/nginx-ingress-helm/glados-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glados-frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "1000m"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - glados-dev.csse.rose-hulman.edu
      secretName: glados-tls
  rules:
    - host: glados-dev.csse.rose-hulman.edu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glados-frontend-service
                port:
                  number: 3000
